syntax = "proto3";
package order;
option go_package = "github.com/sudhin-az/FOOD-ORDERING/order-servie/proto";

service OrderService {
    rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
    rpc GetOrdersByUser(UserRequest) returns (OrderList);
}

message PlaceOrderRequest {
    string user_id = 1;
    repeated string item_ids = 2;
}
message PlaceOrderResponse {
    string order_id = 1;
    string status = 2;
}

message UserRequest {
    string user_id = 1;
}